<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 - 2016 Peter Kenji Yamanaka
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

  </android.support.design.widget.AppBarLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"
          android:orientation="horizontal"
          android:padding="16dp"
          >

        <ImageView
            android:id="@+id/boot_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/full_oval"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_home_24dp"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/boot_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/run_on_startup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

      </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"
          android:text="@string/home_button_explain"
          android:textAppearance="?android:attr/textAppearanceMedium"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="48dp"
          android:orientation="horizontal"
          android:paddingEnd="16dp"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:paddingStart="16dp"
          android:paddingTop="16dp"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/format"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingBottom="16dp"
          android:paddingEnd="16dp"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:paddingStart="16dp"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <TextView
            android:id="@+id/build"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/format"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

      </LinearLayout>

    </LinearLayout>

  </ScrollView>

  <com.pyamsoft.pydroid.support.AdvertisementView
      android:id="@+id/ad_view"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_gravity="bottom"
      />

</android.support.design.widget.CoordinatorLayout>

